fixed an issue with the radio button not changing states

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <label>Savings Balance</label>
     <p id="savings_balance">100</p>
     <form id="account_selection">
-        <input type="radio" id="checking_balance" name="checking" value="checking">
+        <input type="radio" id="checking_account" name="selector" value="checking">
         <label for="checking">Checking Account</label>
-        <input type="radio" id="savings_balance" name="savings" value="savings">
+        <input type="radio" id="savings_account" name="selector" value="savings">
         <label for="savings">Savings Account</label>
+        <input id="amount" type="number" placeholder="Enter an amount"/>
       </form> 
-    <input id="amount" type="number" placeholder="Enter an amount"/>
     <button type="button" id="add">Deposit</button>
     <button type="button" id="subtract">Withdrawal</button>
 </body>
